# TFE23

./: CMakeLists.txt  Test1
CMAKE/: CMake  CMake.c  CMakeCache.txt  CMakeLists.txt  Homework1_5  Homework1_5.c  Makefile  cmake_install.cmake  cmake_test_exec  run_cmake.sh
Hausaufgaben/: 1_2  1_2.c  1_52  1_52.c  Homework1_5  Homework1_5.c
Ordner1/: CMakeLists.txt  C_Kennenlernen  C_Kennenlernen.c  C_Übung.c  Pointer  Pointer.c  Struct_Uebung.c
Semester1/: C_Kennenlernen.c  C_Übung.c  Pointer.c  typedef_Uebung.c
Semester2/: dynamic  dynamic.c  dynamic2  dynamic3.cpp
Semester2/Exeptions/: Aufgabe1  Aufgabe1.cpp
Semester2/OpenCV/: CMakeLists.txt  CVPlot.cpp  Hello_world.cpp
Semester2/Polymorphismus/: Aufgabe1  Aufgabe1.cpp  CMakeLists.txt  Musterlösung  Musterlösung.cpp
Semester2/Template/: Template1  Template1.cpp
Semester2/dynamisch/: dynamic2.cpp  dynamic3
Semester2/vererbung/: inheritance  inheritance.cpp  inheritance2  inheritance2.cpp
cmake/: run_cmake.sh
